[package]
name = "unamed-game"
version = "0.1.0"
edition = "2021"
authors = ["Rob Wygand"]
description = "An as-of-yet unnamed game built on Bevy in Rust."
homepage = "https://github.com/rwygand/unnamed-game"
repository = "https://github.com/rwygand/unnamed-game"
license-file = "LICENSE"
keywords = []

[dependencies]
bevy = { version = "0.10.1", default-features=false, features=[
    "bevy_sprite",
    "bevy_text",
    "bevy_render",
    "png"
] }
rand = "0.8.5"
bevy_ecs_tilemap = "0.10.0"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 'z'
lto = "thin"

[target.'cfg(unix)'.dev-dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_sprite",
    "bevy_text",
    "bevy_render",
    "png",
    "bevy_winit",
    "x11",
]

