[package]
name = "unamed-game"
version = "0.1.0"
edition = "2021"
authors = ["Rob Wygand"]
description = "An as-of-yet unnamed game built on Bevy in Rust."
homepage = "https://github.com/rwygand/unnamed-game"
repository = "https://github.com/rwygand/unnamed-game"
license-file = "LICENSE"
keywords = []

[dependencies]
bevy = { version = "0.10.1" }
bevy_rand = "0.1"
console_error_panic_hook = "0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"

